Assistant checkpoint: Configure ts-node for ESM support
Assistant generated file changes:
- package.json: Update start script to use tsx
- tsconfig.json: Add ts-node compiler options

---

User prompt:

In the shell, I see the following:

```
TypeError [ERR_UNKNOWN_FILE_EXTENSION]: Unknown file extension ".ts" for /home/runner/workspace/src/index.ts
    at Object.getFileProtocolModuleFormat [as file:] (node:internal/modules/esm/get_format:218:9)
    at defaultGetFormat (node:internal/modules/esm/get_format:244:36)
    at defaultLoad (node:internal/modules/esm/load:122:22)
    at async nextLoad (node:internal/modules/esm/hooks:748:22)
    at async nextLoad (node:internal/modules/esm/hooks:748:22)
    at async Hooks.load (node:internal/modules/esm/hooks:385:20)
    at async MessagePort.handleMessage (node:internal/modules/esm/worker:199:18) {
```

If applicable, propose a fix immediately.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -15,6 +15,12 @@
     "emitDeclarationOnly": true,
     "resolveJsonModule": true,
     "noImplicitAny": false,
+
+    "ts-node": {
+      "esm": true,
+      "experimentalSpecifiers": true
+    },
+
     "allowJs": true,
     "checkJs": false,
     "noEmitOnError": false,
