--- a/package.json
+++ b/package.json
@@ -5,12 +5,11 @@
   "type": "module",
   "scripts": {
     "build": "tsup src/index.ts --format esm --dts",
-    "start": "ts-node --esm src/index.ts",
+    "start": "tsc && node --loader ts-node/esm src/index.ts",
     "start:service:all": "pm2 start pnpm --name=\"all\" --restart-delay=3000 --max-restarts=10 -- run start:all",
     "stop:service:all": "pm2 stop all"
   },
   "dependencies": {
-    "@discordjs/opus": "0.9.0",
     "@elizaos/adapter-postgres": "0.1.7",
     "@elizaos/adapter-sqlite": "0.1.7",
     "@elizaos/client-auto": "0.1.7",
@@ -24,17 +23,14 @@
     "@elizaos/plugin-node": "0.1.7",
     "@elizaos/plugin-solana": "0.1.7",
     "@elizaos/plugin-starknet": "0.1.7",
-    "@netlify/plugin-gatsby": "3.8.1",
     "@tavily/core": "0.0.2",
     "amqplib": "0.10.5",
     "better-sqlite3": "11.5.0",
-    "essentials": "1.2.0",
     "fs": "0.0.1-security",
     "net": "1.0.2",
     "path": "0.12.7",
     "readline": "1.3.0",
     "url": "0.11.4",
-    "uuid": "^11.0.4",
     "ws": "8.18.0",
     "yargs": "17.7.2"
   },
