--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@privy-io/react-auth": "^2.1.0",
+    "@shadcn/ui": "^0.0.4",
+    "@solana/web3.js": "^1.98.0",
     "@tailwindcss/vite": "^4.0.0",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
