--- a/frontend/tsconfig.app.json
+++ b/frontend/tsconfig.app.json
@@ -13,7 +13,7 @@
     "isolatedModules": true,
     "moduleDetection": "force",
     "noEmit": true,
-    "jsx": "react-jsx",
+    "jsx": "react-jsx",  // Add this line to enable JSX support 
 
     /* Linting */
     "strict": true,
