--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,7 @@
     "checkJs": false,
     "noEmitOnError": false,
     "moduleDetection": "force",
-    "allowArbitraryExtensions": true
+    "allowArbitraryExtensions": true,
+    "jsx": "react-jsx"  // Ensure this line is added for JSX support
   }
 }
