--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "fs": "0.0.1-security",
     "net": "1.0.2",
     "path": "0.12.7",
+    "pdfjs-dist": "4.0.269",
     "readline": "1.3.0",
     "url": "0.11.4",
     "ws": "8.18.0",
