--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,8 +14,10 @@
     "@shadcn/ui": "^0.0.4",
     "@solana/web3.js": "^1.98.0",
     "@tailwindcss/vite": "^4.0.0",
+    "chart.js": "^4.4.7",
     "lucide-react": "^0.474.0",
     "react": "^18.3.1",
+    "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^7.1.3",
     "tailwindcss": "^4.0.0"
